[package]
name = "nets"
version = "0.1.3"
license = "MIT OR Apache-2.0"
description="Nets is a packet sniffer"
readme = "README.md"
homepage = "https://github.com/asmcos/nets"
repository = "https://github.com/asmcos/nets"
documentation = "https://github.com/asmcos/nets/doc"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
pcap = "0.9.x" 
http = "0.x.x"
pktparse = {version="0.4.x",features = ["derive"]}
#pktparse = {version="0.4.x"}
dns-parser = "0.8"
tls-parser = "0.7"
serde_json = "1.0"
httparse = "1.3.0"
serde = { version = "1.x.x", features = ["derive"] }

